RESOLVED FIXED 272856
http/tests/cookies/private-cookie-storage.html fails when site isolation is enabled
https://bugs.webkit.org/show_bug.cgi?id=272856
Summary http/tests/cookies/private-cookie-storage.html fails when site isolation is e...
Sihui Liu
Reported 2024-04-17 15:00:00 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-04-17 15:05:55 PDT
Sihui Liu
Comment 2 2024-04-17 15:31:04 PDT
EWS
Comment 3 2024-04-19 14:38:51 PDT
Committed 277757@main (7f94f5d99e7a): <https://commits.webkit.org/277757@main> Reviewed commits have been landed. Closing PR #27413 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.