http/tests/cookies/private-cookie-storage.html fails when site isolation is enabled https://bugs.webkit.org/show_bug.cgi?id=272856 rdar://126647153

Reviewed by Alex Christensen.

The test switches sessions on navigation (with TestRunner setShouldSwapToDefaultSessionOnNextNavigation and
setShouldSwapToEphemeralSessionOnNextNavigation) and thus swaps web processes on navigation (because each web process is
tied with one WebsiteDataStore/session). The test fails with site isolation enabled as UI process does not pick web
process with target WebsiteDataStore for navigation. To fix that, this patch ensure to check WebsiteDataStore of
WebProcessProxy before using it.

* Source/WebKit/UIProcess/BrowsingContextGroup.cpp:
(WebKit::BrowsingContextGroup::ensureProcessForDomain):
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::processForRegistrableDomain):
* Source/WebKit/UIProcess/WebPageProxy.h:
* Source/WebKit/UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::processForNavigation):

Canonical link: https://commits.webkit.org/277757@main